--- a/Wesbite/index.html
+++ b/Wesbite/index.html
@@ -3,11 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Shopping Website</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <nav>
-        <div class="logo"><img src="assets/images/logo.png" alt="Logo"></div>
+    <nav id="navbar">
+        <div class="logo">
+            <img src="assets/images/logo.png" alt="Logo">
+        </div>
+        <ul class="pages">
+            <li>Element</li>
+            <li>Shop</li>
+            <li>Track Order</li>
+            <li>Blog</li>
+            <li>About us</li>
+            <li>Contacts</li>
+            <li><i class="fa-solid fa-magnifying-glass"></i></li>
+        </ul>
+        <div class="nav-right">
+            <ul>
+                <li><i class="fa-solid fa-arrows-rotate"></i></li>
+                <li><i class="fa-regular fa-heart"></i></li>
+                <li><i class="fa-regular fa-user"></i></li>
+                <li>Sign in</li>
+            </ul>
+            <button class="cart-btn">
+                <i class="fa-solid fa-cart-arrow-down"></i>
+                 Cart <span>$0.00</span>
+            </button>
+        </div>
     </nav>
+    <main>
+
+        <section id="hero-section">
+            <div class="content">
+            <span>The Next generation</span>
+            <h1>Innovation That</h1>
+            <h1>Drives Emotion</h1>
+            <p>Get instant alerts for anyone who approaches, even <br> if they don’t press the headphone.</p>
+            <button class="buy-btn">
+                <i class="fa-solid fa-cart-arrow-down"></i>
+                Buy Now - <span>$320</span>
+            </button>
+        </div>
+    </section>
+</main>
 </body>
 </html>
