--- a/Wesbite/index.html
+++ b/Wesbite/index.html
@@ -38,7 +38,6 @@
         </div>
     </nav>
     <main>
-
         <section id="hero-section">
             <div class="content">
             <span>The Next generation</span>
@@ -52,5 +51,6 @@
         </div>
     </section>
 </main>
+<script src="assets/JavaScript/script.js"></script>
 </body>
 </html>
