--- a/Wesbite/index.html
+++ b/Wesbite/index.html
@@ -50,6 +50,39 @@
             </button>
         </div>
     </section>
+    <section id="product-section">
+        <div class="product-content">
+
+            <div class="product">
+                <div>
+                <h3>Computer & PC</h3>
+                <span>6 PRODUCTS</span>
+            </div>
+            <img class="product-img" src="assets/images/product-1.jpeg" alt="">
+        </div>
+        <div class="product">
+            <div>
+                <h3>Smart Gadgets</h3>
+                <span>2 PRODUCTS</span>
+            </div>
+            <img class="product-img" src="assets/images/product-2.jpeg" alt="">
+        </div>
+        <div class="product">
+            <div>
+                <h3>TV & Monitors</h3>
+                <span>5 PRODUCTS</span>
+            </div>
+            <img class="product-img" src="assets/images/product-3.jpeg" alt="">
+        </div>
+        <div class="product">
+            <div>
+                <h3>Wearable Items</h3>
+                <span>9 PRODUCTS</span>
+            </div>
+            <img class="product-img" src="assets/images/product-4.jpeg" alt="">
+        </div>
+    </div>
+    </section>
 </main>
 <script src="assets/JavaScript/script.js"></script>
 </body>
