--- a/Wesbite/index.html
+++ b/Wesbite/index.html
@@ -122,10 +122,10 @@
         <div class="smart-product-content">
             <div class="left">
                 <img class="smart-product-img" src="assets/images/Pin-Banner-1.jpeg" alt="" />
-                <i class="fa-solid fa-plus"></i>
-                <i class="fa-solid fa-plus"></i>
-                <i class="fa-solid fa-plus"></i>
-                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-plus icon-1"></i>
+                <i class="fa-solid fa-plus icon-2"></i>
+                <i class="fa-solid fa-plus icon-3"></i>
+                <i class="fa-solid fa-plus icon-4"></i>
             </div>
             <div class="right">
                 <h3>Lookout Smart products here, there, everywhere.</h3>
@@ -135,7 +135,7 @@
                     refurbished and pre-owned items save more with coupons and 70% off.
                     Super value deals 2022
                 </p>
-                <button>View All Products</button>
+                <button class="btn">View All Products</button>
             </div>
         </div>
       </section>
