--- a/Wesbite/index.html
+++ b/Wesbite/index.html
@@ -138,6 +138,17 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
               </div>
+            <div class="hover-item">
+              <img src="assets/images/Echo Dot img.jpeg" alt="">
+              <h4>Amazon Echo Dot (3rd Gen) Smart</h4>
+              <span class="price">$805.00</span>
+              <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
               <button>Add to cart</button>
             </div>
             <div class="right">
