--- a/Wesbite/index.html
+++ b/Wesbite/index.html
@@ -122,10 +122,10 @@
         <div class="smart-product-content">
             <div class="left">
                 <img class="smart-product-img" src="assets/images/Pin-Banner-1.jpeg" alt="" />
-                <i class="fa-solid fa-plus icon-1"></i>
-                <i class="fa-solid fa-plus icon-2"></i>
-                <i class="fa-solid fa-plus icon-3"></i>
-                <i class="fa-solid fa-plus icon-4"></i>
+                <i class="fa-solid fa-plus icon-1 icon"></i>
+                <i class="fa-solid fa-plus icon-2 icon"></i>
+                <i class="fa-solid fa-plus icon-3 icon"></i>
+                <i class="fa-solid fa-plus icon-4 icon"></i>
             </div>
             <div class="hover-item">
               <img src="assets/images/Echo Dot img.jpeg" alt="">
@@ -138,6 +138,8 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
               </div>
+              <button>Add to cart</button>
+            </div>
             <div class="hover-item">
               <img src="assets/images/Echo Dot img.jpeg" alt="">
               <h4>Amazon Echo Dot (3rd Gen) Smart</h4>
