--- a/Wesbite/index.html
+++ b/Wesbite/index.html
@@ -127,7 +127,7 @@
                 <i class="fa-solid fa-plus icon-3 icon"></i>
                 <i class="fa-solid fa-plus icon-4 icon"></i>
             </div>
-            <div class="hover-item">
+            <div class="hover-item hover-item-1">
               <img src="assets/images/Echo Dot img.jpeg" alt="">
               <h4>Amazon Echo Dot (3rd Gen) Smart</h4>
               <span class="price">$805.00</span>
@@ -140,10 +140,36 @@
               </div>
               <button>Add to cart</button>
             </div>
-            <div class="hover-item">
-              <img src="assets/images/Echo Dot img.jpeg" alt="">
-              <h4>Amazon Echo Dot (3rd Gen) Smart</h4>
-              <span class="price">$805.00</span>
+            <div class="hover-item hover-item-2">
+              <img src="assets/images/camera.jpeg" alt="">
+              <h4>Nest Mini Smart Speaker with Google Assistant</h4>
+              <span class="price">$200.50</span>
+              <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <button>Add to cart</button>
+            </div>
+            <div class="hover-item hover-item-3">
+              <img src="assets/images/Wi-Fi Video Doorbell.jpeg" alt="">
+              <h4>Google – Nest Hello Smart Wi-Fi Video Doorbell</h4>
+              <span class="price">$1300.50</span>
+              <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <button>Add to cart</button>
+            </div>
+            <div class="hover-item hover-item-4">
+              <img src="assets/images/headphones.jpeg" alt="">
+              <h4>Google – Nest Hello Smart Wi-Fi Video Doorbell</h4>
+              <span class="price">$1300.50</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
