--- a/Wesbite/index.html
+++ b/Wesbite/index.html
@@ -191,6 +191,11 @@
             </div>
         </div>
       </section>
+      <section id="tranding-item-section">
+        <div class="tranding-item-content">
+          <h1>Shop Our Trending Items</h1>
+        </div>
+      </section>
     </main>
     <script src="assets/JavaScript/script.js"></script>
   </body>
