--- a/Wesbite/index.html
+++ b/Wesbite/index.html
@@ -230,7 +230,26 @@
         <div class="tranding-item-content">
           <h1>Shop Our Trending Items</h1>
           <hr>
-          
+          <div class="tranding-items">
+            <div class="first-item item">
+              <img src="assets/images/first_item.png" alt="">
+              <div>
+                <span>Computer & PC</span>
+                <p>Olufen 17 Wireless Bluetooth Portable Speaker</p>
+                <div class="rating">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                </div>
+                <div class="price">
+                  <span>$300.00</span>
+                  <span>$275.50</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
